--- a/SamsungFieldTestClient/app/src/main/res/layout/activity_main.xml
+++ b/SamsungFieldTestClient/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="${packageName}.${activityClass}">
+    tools:context="ru0xdc.sfts.client.MainActivity">
 
     <Button
         android:id="@+id/button_load"
@@ -14,56 +14,54 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/button_load">
+        android:layout_below="@id/button_load"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:scrollbarStyle="outsideInset"
+        android:clipToPadding="false" >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingRight="8dp"
+            android:paddingLeft="8dp"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/version"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="16dp"
-                android:textColor="#00FF00"
-                android:typeface="monospace"
+                android:id="@+id/cpSwVersion"
+                style="@style/InfoText"
+                android:layout_marginTop="0dp"
                 tools:text="blablabla" />
+
+            <TextView
+                android:id="@+id/ftaSwVersion"
+                tools:text="blablabla"
+                style="@style/InfoText" />
+
+            <TextView
+                android:id="@+id/ftaHwVersion"
+                tools:text="blablabla"
+                style="@style/InfoText" />
+
+            <TextView
+                android:id="@+id/versionAll"
+                tools:text="blablabla"
+                style="@style/InfoText" />
 
             <TextView
                 android:id="@+id/basic_info"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="16dp"
-                android:textColor="#00FF00"
-                android:typeface="monospace"
-                tools:text="blablabla" />
+                tools:text="blablabla"
+                style="@style/InfoText" />
 
             <TextView
                 android:id="@+id/neighbours"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="16dp"
-                android:textColor="#00FF00"
-                android:typeface="monospace"
-                tools:text="blablabla" />
+                tools:text="blablabla"
+                style="@style/InfoText" />
 
             <TextView
                 android:id="@+id/ciphering_info"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="16dp"
-                android:textColor="#00FF00"
-                android:typeface="monospace"
-                tools:text="blablabla" />
+                tools:text="blablabla"
+                style="@style/InfoText" />
 
         </LinearLayout>
 
